--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "pre-e2e": "webdriver-manager start"
   },
   "dependencies": {
-    "allure-commandline": "^2.9.0",
+    "jasmine-allure-reporter": "^1.0.2",
     "protractor": "^5.3.0",
     "rmdir": "^1.2.0",
-    "wdio-allure-reporter": "^0.8.3",
     "xlsx": "^0.14.1",
     "yargs": "^9.0.1"
   }
