--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Framework for test automation wargaming.com",
   "scripts": {
     "update": "webdriver-manager update",
+    "pre-e2e": "webdriver-manager start",
     "e2e": "protractor protractor.config.js",
-    "pre-e2e": "webdriver-manager start"
+    "e2e-local": "protractor protractor.config.js",    
+    "poste2e-local": "allure generate allure-results --clean -o allure-report"
   },
   "dependencies": {
+    "allure-commandline": "^2.9.0",
     "jasmine-allure-reporter": "^1.0.2",
     "protractor": "^5.3.0",
     "rmdir": "^1.2.0",
